@@ -1,5 +1,6 @@
 Changes in 3.7.3:
 - Support for silent uninstall on Windows #263
+- Improve detection of the default primary network interface on Windows #257
 - Update Linux SWT for better support for KDE dark themes #247
 - Support installing of .deb packages with Java 15 #266
 - Do not show first run dialog nor check version updates if run with any command-line arguments (for automation)
